# Preprocess

./: CMakeLists.txt  README.md  log.txt  main.cpp  mainwindow.cpp  mainwindow.h
checkers/: CMakeLists.txt  checkfile.cpp  checkoneline.cpp  checktwoline.cpp  func  func.cpp
checkers/utf8_v2_3_4/source/utf8/: checked.h~
test/file/: comment.h  multipleInclude.h
test/oneLine/: brackets.cpp  constantSuff.cpp  define.cpp  float.cpp  include.cpp  int.cpp  long.cpp  oneOperator(for).cpp  oneOperator.cpp
test/twoLine/: indent.cpp  indentBrac.cpp
